--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   },
   "license": "0BSD",
   "dependencies": {
-    "gatsby": "^2.24.47",
+    "gatsby": "^2.30.3",
+    "gatsby-remark-autolink-headers": "^2.9.0",
+    "gatsby-remark-table-of-contents": "^1.0.0",
     "gatsby-theme-blog": "^1.6.61",
     "gatsby-theme-notes": "^1.3.87",
+    "gatsby-transformer-remark": "^2.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   }
