--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "gatsby-transformer-remark": "^2.14.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
+  },
+  "devDependencies": {
+    "gatsby-plugin-root-import": "^2.0.5"
   }
 }
